--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,7 +10,7 @@
 	<script src="https://kit.fontawesome.com/da9e139664.js" crossorigin="anonymous"></script>
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/css/style.css">
-	<script type="module" src="./assets/js/main.js" defer></script>
+ 	<script type="module" src="./assets/js/main.js"></script>
 </head>
 <body>
 <header>
