modifications of functions trash and add

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -74,7 +74,7 @@
 			</nav>
 		</header>
 		<h2>Log In</h2>
-		<form method="dialog">
+		<form method="dialog" novalidate>
 			<label for="email">E-mail</label>
 			<input type="email" name="email" id="email" autocomplete="on" autofocus> 
 			<label for="password">Mot de passe</label>
